Closed Bug 398143 Opened 17 years ago Closed 17 years ago

Dragging scrollbar with mouse while autocomplete input has focus triggers autocomplete

Categories

(Firefox :: Address Bar, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: martijn.martijn, Assigned: martijn.martijn)

References

()

Details

(Keywords: regression)

Attachments

(2 files)

To reproduce:
- Open google.com (make sure you have autocomplete entries)
- Make window very small to get scrollbars
- Focus text input
- Click (or drag) on the scrollbar

Actual result:
Autocomplete popup appears.

Expected result:
No autocomplete popup appears.
Attached file testcase
Attached patch patchSplinter Review
This basically adds the check back in that was that the target element is an input element, which was there already before I removed it in bug 256856.
I don't need a check for targetInput != mFocusedInput, e.g., focusing another input with mousedown doesn't trigger autocomplet, but I could add it too, if you prefer.
Attachment #283008 - Flags: review?(mano)
MW, in my bug the autocomplete detaches from the input field. Will your patch fix that also? I don't see it mentioned in this report...thats why I'm asking. I had a screenshot in the duped bug showing that and the url you don't have to resize and causes the detaching.
Never mind I finally got the testcase to work and see it is the exact same bug. Sorry about the bug spam.
No problem, I just hope that Mano can get this reviewed quickly to prevent dupe harvesting.
Flags: blocking-firefox3?
Comment on attachment 283008 [details] [diff] [review]
patch

r=mano.
Attachment #283008 - Flags: review?(mano) → review+
Comment on attachment 283008 [details] [diff] [review]
patch

Thanks for the quick review!
Attachment #283008 - Flags: approval1.9?
Attachment #283008 - Flags: approval1.9? → approval1.9+
Assignee: nobody → martijn.martijn
Checking in nsFormFillController.cpp;
/cvsroot/mozilla/toolkit/components/satchel/src/nsFormFillController.cpp,v  <--
 nsFormFillController.cpp
new revision: 1.92; previous revision: 1.91
done

Checked in on trunk.
Status: NEW → RESOLVED
Closed: 17 years ago
Flags: blocking-firefox3?
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: