Bug 398143 - Dragging scrollbar with mouse while autocomplete input has focus triggers autocomplete, r=mano, a=mconnor